<resources>
    <string name="app_name">CookBot</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->

    <string name="home_fragment_label">Home Fragment</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="third_fragment_label">Third Fragment</string>
    <string name="fourth_fragment_label">Fourth Fragment</string>
    <string name="fifth_fragment_label">Fifth Fragment</string>

    <string name="next">食材の追加・削除</string>
    <string name="home">ホーム画面へ</string>
    <string name="search">レシピ検索</string>
    <string name="previous_third">食材リストへ</string>
    <string name="previous_fourth">ランキングへ</string>
    <string name="request">Request</string>
    <string name="recipeView">レシピ詳細へ</string>
    <string name="finish">料理完成</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment</string>
    <string name="hello_third_fragment">Hello third fragment</string>
    <string name="move">移動</string>
    <string name="contents">コンテンツ</string>
    <string name="reg">登録</string>
    <string name="del">削除</string>
    <string name="name">食材</string>
    <string name="date">期限</string>

</resources>